--- a/src/index.html
+++ b/src/index.html
@@ -10,4 +10,6 @@
 <body>
   <app-root></app-root>
 </body>
+<script src="assets/sockjs.min.js"></script>
+<script src="assets/stomp.min.js"></script>
 </html>
